--- a/config/avenue_config.json
+++ b/config/avenue_config.json
@@ -8,5 +8,5 @@
   "C:\\Users\\Christopeer\\Downloads\\InfractiVision-main\\videos\\Traffic IP Camera video.mp4": "dasdsa",
   "C:\\Users\\Christopeer\\Downloads\\InfractiVision-main\\videos\\LPR Camera China in Day Time DEMO from PTCCTV.mp4": "asddas",
   "C:\\Users\\Christopeer\\Downloads\\TallerIntegrador\\videos\\Traffic IP Camera video.mp4": "Av nicolas de pierola",
-  "C:\\Users\\Christopeer\\Downloads\\TallerIntegrador\\videos\\LPR Camera China in Day Time DEMO from PTCCTV.mp4": "Av Manuel Vera"
+  "C:\\Users\\Christopeer\\Downloads\\TallerIntegrador\\videos\\LPR Camera China in Day Time DEMO from PTCCTV.mp4": "Av Usarez"
 }
