Add Accident Model

--- a/config/polygon_config.json
+++ b/config/polygon_config.json
@@ -146,5 +146,23 @@
       1859,
       371
     ]
+  ],
+  "C:\\Users\\Christopeer\\Downloads\\TallerIntegrador\\videos\\1080P 2.0Megapixel IP camera video on road.mp4": [
+    [
+      570,
+      505
+    ],
+    [
+      527,
+      646
+    ],
+    [
+      1247,
+      578
+    ],
+    [
+      1201,
+      448
+    ]
   ]
 }
