Wrongway commit mejora

--- a/config/avenue_config.json
+++ b/config/avenue_config.json
@@ -7,9 +7,9 @@
   "videos\\LPR Camera China in Day Time DEMO from PTCCTV.mp4": "Av Suarez 344",
   "C:\\Users\\Christopeer\\Downloads\\InfractiVision-main\\videos\\Traffic IP Camera video.mp4": "dasdsa",
   "C:\\Users\\Christopeer\\Downloads\\InfractiVision-main\\videos\\LPR Camera China in Day Time DEMO from PTCCTV.mp4": "asddas",
-  "C:\\Users\\Christopeer\\Downloads\\TallerIntegrador\\videos\\Traffic IP Camera video.mp4": "Av nicolas de pierola",
   "C:\\Users\\Christopeer\\Downloads\\TallerIntegrador\\videos\\LPR Camera China in Day Time DEMO from PTCCTV.mp4": "Av Usarez",
-  "C:\\Users\\Christopeer\\Downloads\\TallerIntegrador\\videos\\1080P 2.0Megapixel IP camera video on road.mp4": "Av Suarez",
   "C:\\Users\\Christopeer\\Downloads\\TallerIntegrador\\videos\\W_A4xFDNjnU.mp4": "Av Varila",
-  "C:\\Users\\Christopeer\\Downloads\\TallerIntegrador\\videos\\YF_DzoTDO-0.mp4": "Av Suarez"
+  "C:\\Users\\Christopeer\\Downloads\\TallerIntegrador\\videos\\Traffic IP Camera video.mp4": "mi casa",
+  "C:\\Users\\Christopeer\\Downloads\\TallerIntegrador\\videos\\1080P 2.0Megapixel IP camera video on road.mp4": "mi casa",
+  "C:\\Users\\Christopeer\\Downloads\\TallerIntegrador\\videos\\YF_DzoTDO-0.mp4": "AV EJEMPLO"
 }
